[tool.poetry]
name = "yaplotlib"
version = "0.1.3"
description = "A tiny library to generate Yaplot file."
authors = ["vitroid <vitroid@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.group.dev.dependencies]
pdoc = "^15.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
